// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`return article results when searching with article id 1`] = `
Object {
  "facets": Array [
    Object {
      "doc_count": 1,
      "key": "code_du_travail",
    },
    Object {
      "doc_count": 1,
      "key": "fiches_ministere_travail",
    },
  ],
  "hits": Object {
    "hits": Array [
      Object {
        "_id": "8",
        "_index": "cdtn_document_test",
        "_score": 9.220069,
        "_source": Object {
          "slug": "r1225-18",
          "source": "code_du_travail",
          "title": "Article R1225-18",
          "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000018537778&cidTexte=LEGITEXT000006072050",
        },
        "_type": "cdtn_document_test",
      },
      Object {
        "_id": "15",
        "_index": "cdtn_document_test",
        "_score": 4.90225,
        "_source": Object {
          "anchor": "#A-qui-s-applique-le-SMIC",
          "slug": "le-smic-a-qui-sapplique-le-smic",
          "source": "fiches_ministere_travail",
          "title": "Le SMIC : à qui s’applique le SMIC ?",
          "url": "https://travail-emploi.gouv.fr/droit-du-travail/la-remuneration/article/le-smic-374531#A-qui-s-applique-le-SMIC",
        },
        "_type": "cdtn_document_test",
      },
    ],
    "max_score": 9.220069,
    "total": 2,
  },
}
`;

exports[`return faq search results for demission  1`] = `
Object {
  "hits": Array [],
}
`;

exports[`return faq search results for smic with snippet content 1`] = `
Object {
  "facets": Array [
    Object {
      "doc_count": 1,
      "key": "fiches_ministere_travail",
    },
    Object {
      "doc_count": 1,
      "key": "fiches_service_public",
    },
  ],
  "hits": Object {
    "hits": Array [
      Object {
        "_id": "15",
        "_index": "cdtn_document_test",
        "_score": 29.635332,
        "_source": Object {
          "anchor": "#A-qui-s-applique-le-SMIC",
          "slug": "le-smic-a-qui-sapplique-le-smic",
          "source": "fiches_ministere_travail",
          "title": "Le SMIC : à qui s’applique le SMIC ?",
          "url": "https://travail-emploi.gouv.fr/droit-du-travail/la-remuneration/article/le-smic-374531#A-qui-s-applique-le-SMIC",
        },
        "_type": "cdtn_document_test",
      },
      Object {
        "_id": "5",
        "_index": "cdtn_document_test",
        "_score": 3.6067817,
        "_source": Object {
          "slug": "demission-dune-assistante-maternelle",
          "source": "fiches_service_public",
          "title": "Démission d'une assistante maternelle",
          "url": "https://www.service-public.fr/particuliers/vosdroits/F33164",
        },
        "_type": "cdtn_document_test",
      },
    ],
    "max_score": 29.635332,
    "total": 3,
  },
  "snippet": Object {
    "_id": "14",
    "_index": "cdtn_document_test",
    "_score": 25.251343,
    "_source": Object {
      "html": "<p>Au 1er janvier 2019, le montant du <accronym title='Salaire minimum interprofessionnel de croissance' lang='fr'>SMIC</accronym> brut horaire s'établit à <b>10,03&nbsp;€</b> en métropole, en Guadeloupe, en Guyane, en Martinique, à La Réunion, à Saint-Barthélemy, à Saint-Martin et à Saint-Pierre-et-Miquelon.<br/> Soit <b>1521,22&nbsp;€</b> mensuels sur la base de la durée légale du travail de 35 heures hebdomadaires</p>",
      "references": Array [
        Object {
          "titre": "Décret n° 2018-1173 du 19 décembre 2018 portant relèvement du salaire minimum de croissance ",
          "url": "https://www.legifrance.gouv.fr/eli/decret/2018/12/19/MTRX1833925D/jo/texte",
        },
      ],
    },
    "_type": "cdtn_document_test",
  },
}
`;

exports[`return search results for demission 1`] = `
Object {
  "hits": Array [
    Object {
      "_id": "VNQWlGsBPUX8CkMHsmI2",
      "_index": "code_du_travail_numerique",
      "_score": 16.53278,
      "_source": Object {
        "slug": "demission-dun-salarie",
        "source": "fiches_service_public",
        "title": "Démission d'un salarié",
        "url": "https://www.service-public.fr/particuliers/vosdroits/F2883",
      },
      "_type": "code_du_travail_numerique",
      "relevance": 5,
    },
    Object {
      "_id": "ONQWlGsBPUX8CkMHuGRZ",
      "_index": "code_du_travail_numerique",
      "_score": 31.28897,
      "_source": Object {
        "anchor": "#Comment-presenter-une-demission",
        "slug": "demission-comment-presenter-une-demission",
        "source": "fiches_ministere_travail",
        "title": "Démission : comment présenter une démission ?",
        "url": "https://travail-emploi.gouv.fr/droit-du-travail/la-rupture-du-contrat-de-travail/article/la-demission#Comment-presenter-une-demission",
      },
      "_type": "code_du_travail_numerique",
      "relevance": 5,
    },
    Object {
      "_id": "69QWlGsBPUX8CkMHkTf1",
      "_index": "code_du_travail_numerique",
      "_score": 9.976059,
      "_source": Object {
        "slug": "l1237-1",
        "source": "code_du_travail",
        "title": "Article L1237-1",
        "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000006901174&cidTexte=LEGITEXT000006072050",
      },
      "_type": "code_du_travail_numerique",
      "relevance": 5,
    },
    Object {
      "_id": "QdQWlGsBPUX8CkMHkTfx",
      "_index": "code_du_travail_numerique",
      "_score": 12.340258,
      "_source": Object {
        "slug": "l1231-1",
        "source": "code_du_travail",
        "title": "Article L1231-1",
        "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000019071194&cidTexte=LEGITEXT000006072050",
      },
      "_type": "code_du_travail_numerique",
      "relevance": 5,
    },
    Object {
      "_id": "T9QWlGsBPUX8CkMHrGHT",
      "_index": "code_du_travail_numerique",
      "_score": 29.38531,
      "_source": Object {
        "slug": "peut-on-demissionner-pendant-ses-conges-payes",
        "source": "fiches_service_public",
        "title": "Peut-on démissionner pendant ses congés payés ?",
        "url": "https://www.service-public.fr/particuliers/vosdroits/F12598",
      },
      "_type": "code_du_travail_numerique",
      "relevance": 4,
    },
    Object {
      "_id": "sdQWlGsBPUX8CkMHrGHV",
      "_index": "code_du_travail_numerique",
      "_score": 27.494377,
      "_source": Object {
        "slug": "peut-on-demissionner-pendant-un-conge-maternite",
        "source": "fiches_service_public",
        "title": "Peut-on démissionner pendant un congé maternité ?",
        "url": "https://www.service-public.fr/particuliers/vosdroits/F1730",
      },
      "_type": "code_du_travail_numerique",
      "relevance": 4,
    },
    Object {
      "_id": "ddQWlGsBPUX8CkMHsmI3",
      "_index": "code_du_travail_numerique",
      "_score": 27.990566,
      "_source": Object {
        "slug": "peut-on-demissionner-pendant-un-arret-maladie",
        "source": "fiches_service_public",
        "title": "Peut-on démissionner pendant un arrêt maladie ?",
        "url": "https://www.service-public.fr/particuliers/vosdroits/F31679",
      },
      "_type": "code_du_travail_numerique",
      "relevance": 4,
    },
    Object {
      "_id": "4NQWlGsBPUX8CkMHsmI5",
      "_index": "code_du_travail_numerique",
      "_score": 27.392416,
      "_source": Object {
        "slug": "peut-on-demissionner-pendant-un-conge-parental",
        "source": "fiches_service_public",
        "title": "Peut-on démissionner pendant un congé parental ?",
        "url": "https://www.service-public.fr/particuliers/vosdroits/F540",
      },
      "_type": "code_du_travail_numerique",
      "relevance": 4,
    },
    Object {
      "_id": "O9QWlGsBPUX8CkMHuGRZ",
      "_index": "code_du_travail_numerique",
      "_score": 28.318968,
      "_source": Object {
        "anchor": "#Faut-il-respecter-un-preavis",
        "slug": "demission-faut-il-respecter-un-preavis",
        "source": "fiches_ministere_travail",
        "title": "Démission : faut-il respecter un préavis ?",
        "url": "https://travail-emploi.gouv.fr/droit-du-travail/la-rupture-du-contrat-de-travail/article/la-demission#Faut-il-respecter-un-preavis",
      },
      "_type": "code_du_travail_numerique",
      "relevance": 4,
    },
    Object {
      "_id": "PtQWlGsBPUX8CkMHuGRZ",
      "_index": "code_du_travail_numerique",
      "_score": 33.23731,
      "_source": Object {
        "anchor": "#Le-salarie-peut-il-lt-lt-demissionner-dans-le-cadre-d-un-contrat-a-nbsp",
        "slug": "demission-le-salarie-peut-il-demissionner-dans-le-cadre-dun-contrat-a-duree-determinee",
        "source": "fiches_ministere_travail",
        "title": "Démission : le salarié peut-il « démissionner » dans le cadre d’un contrat à durée déterminée ?",
        "url": "https://travail-emploi.gouv.fr/droit-du-travail/la-rupture-du-contrat-de-travail/article/la-demission#Le-salarie-peut-il-lt-lt-demissionner-dans-le-cadre-d-un-contrat-a-nbsp",
      },
      "_type": "code_du_travail_numerique",
      "relevance": 4,
    },
    Object {
      "_id": "pdQWlGsBPUX8CkMHsmI4",
      "_index": "code_du_travail_numerique",
      "_score": 25.200104,
      "_source": Object {
        "slug": "demission-dune-assistante-maternelle",
        "source": "fiches_service_public",
        "title": "Démission d'une assistante maternelle",
        "url": "https://www.service-public.fr/particuliers/vosdroits/F33164",
      },
      "_type": "code_du_travail_numerique",
      "relevance": 3,
    },
    Object {
      "_id": "l9QWlGsBPUX8CkMHsmI3",
      "_index": "code_du_travail_numerique",
      "_score": 29.233229,
      "_source": Object {
        "slug": "demission-du-salarie-a-domicile-employe-par-un-particulier",
        "source": "fiches_service_public",
        "title": "Démission du salarié à domicile employé par un particulier",
        "url": "https://www.service-public.fr/particuliers/vosdroits/F32431",
      },
      "_type": "code_du_travail_numerique",
      "relevance": 3,
    },
    Object {
      "_id": "OtQWlGsBPUX8CkMHuGRZ",
      "_index": "code_du_travail_numerique",
      "_score": 39.01729,
      "_source": Object {
        "anchor": "#Le-refus-par-le-salarie-d-accepter-un-changement-des-conditions-de-nbsp",
        "slug": "demission-le-refus-par-le-salarie-daccepter-un-changement-des-conditions-de-travail-est-il-une-demission",
        "source": "fiches_ministere_travail",
        "title": "Démission : le refus, par le salarié, d’accepter un changement des conditions de travail est-il une démission ?",
        "url": "https://travail-emploi.gouv.fr/droit-du-travail/la-rupture-du-contrat-de-travail/article/la-demission#Le-refus-par-le-salarie-d-accepter-un-changement-des-conditions-de-nbsp",
      },
      "_type": "code_du_travail_numerique",
      "relevance": 3,
    },
    Object {
      "_id": "7NQWlGsBPUX8CkMHkTf1",
      "_index": "code_du_travail_numerique",
      "_score": 10.407834,
      "_source": Object {
        "slug": "l1237-2",
        "source": "code_du_travail",
        "title": "Article L1237-2",
        "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000006901175&cidTexte=LEGITEXT000006072050",
      },
      "_type": "code_du_travail_numerique",
      "relevance": 3,
    },
    Object {
      "_id": "99QWlGsBPUX8CkMHsmI5",
      "_index": "code_du_travail_numerique",
      "_score": 29.657969,
      "_source": Object {
        "slug": "peut-on-percevoir-lallocation-chomage-en-cas-de-demission",
        "source": "fiches_service_public",
        "title": "Peut-on percevoir l'allocation chômage en cas de démission ?",
        "url": "https://www.service-public.fr/particuliers/vosdroits/F89",
      },
      "_type": "code_du_travail_numerique",
      "relevance": 2,
    },
    Object {
      "_id": "PNQWlGsBPUX8CkMHuGRZ",
      "_index": "code_du_travail_numerique",
      "_score": 26.313335,
      "_source": Object {
        "anchor": "#Et-les-heures-pour-recherche-d-emploi",
        "slug": "demission-et-les-heures-pour-recherche-demploi",
        "source": "fiches_ministere_travail",
        "title": "Démission : et les heures pour recherche d’emploi ?",
        "url": "https://travail-emploi.gouv.fr/droit-du-travail/la-rupture-du-contrat-de-travail/article/la-demission#Et-les-heures-pour-recherche-d-emploi",
      },
      "_type": "code_du_travail_numerique",
      "relevance": 2,
    },
  ],
}
`;
